2000-02-17  Vadim Zaliva  <lord@crocodile.org>

	* parser.h (ParseErrorCode): DiagnoseParser error codes definitions
	moved to here from javadefs.h and grouped as new Enum.

	* diagnose.h:
	* diagnose.cpp: DiagnoseParser uses JikesAPI for error reporting.

2000-02-14  Vadim Zaliva  <lord@crocodile.org>

	* config.h:
	* config.cpp:
	* stream.h:
	* stream.cpp: funneling Lexical errors thrue JikesAPI.

2000-02-13  Vadim Zaliva  <lord@crocodile.org>

	* error.h:
	* error.cpp:
	* jikes.cpp:
	* jikesapi.cpp:
	* jikesapi.h: initial version of API for integration
	of jikes into various IDEs.

2000-02-03  Vadim Zaliva  <lord@crocodile.org>

	* stream.cpp (ProcessInputUnicode): 
	* option.cpp (Option): 
	Using 'iconv' (if found) for encoding conversions.

	* error.cpp (StaticInitializer): unsupported encoding is now treated 
	as an error, not warning.

	* configure.in: added check for 'iconv.h' header.

2000-02-02  Vadim Zaliva  <lord@crocodile.org>

	* stream.cpp (ProcessInputUnicode): better conversion error reporting.
	corrected problem with buffer underflow on last character.
	Better handling of end of input data while converting to Unicode.

	* option.cpp (nowrite): better handling of -encoding option when 
	compiled w/o ICU.

2000-02-01  C. Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>

	* java.g:  corrected "converting to Token" twice problem.
	which was causing crash compiling empty case statement with 
	empty default clause.

2000-01-18  Vadim Zaliva  <lord@crocodile.org>

	* stream.cpp (ProcessInputUnicode): buffer resize on surrogate
 	characters use more accurate memory allocation.

	* configure.in: check for wmemcpy added.

2000-01-18  C. Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>

	* bytecode.cpp:
	* control.cpp:
	* lookup.cpp:
	* symbol.cpp:
	* symbol.h:
	* system.cpp: Debugging malloc libraries are marvelous things.
  	The attached patch fixes five small memory leaks and one instance
 	of delete given a null pointer (not actually incorrect, but bad